Try to fix JVM illegal access bug